--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-#container{
-	height: 600px;
-}
 #img_home{
 	width: 70%;
 	height: 100%;
@@ -47,10 +44,24 @@
 	clear:both;
 }
 #tooltip-span {
-    /*display:none;*/
+    display:none;
     /*display:block;*/
     position:absolute;
     overflow:hidden;
     background-color: black;
     color: white;
+}
+/*body{ background-color: #2c3e50;  }*/
+.btn-bs-file{
+    position:relative;
+}
+.btn-bs-file input[type="file"]{
+    position: absolute;
+    top: -9999999;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    width:0;
+    height:0;
+    outline: none;
+    cursor: inherit;
 }
