--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,19 @@
 #img_home{
-	width: 70%;
 	height: 100%;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	display: block;
 	overflow: scroll;
-	float: left;
 	position: relative;
-	resize: both;
+	/*resize: both;*/
 	
 }
 .sidebar{
-	width: 28%;
 	height: 100%;
-	float: left;
 }
 #actualData, #alteredData{
-	height: 90%;
 	width: 100%;
 }
 #facedata{
-	width: 100%;
 	height: 80%;
 }
 #canvas{
