--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,9 @@
     outline: none;
     cursor: inherit;
 }
+.facebox {
+	position: absolute;
+    border: 2px solid #12BDDC;
+    border-color: rgba(18,189,220,0.8);
+    border-radius: 10px;
+}
