Make the facebox selectable Don't make the box on just click Implement switch to toggle between box and point plotting

--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,9 @@
     border-color: rgba(18,189,220,0.8);
     border-radius: 10px;
 }
+#ptnDtl, #boxDtl{
+	display: none;
+}
+.selected{
+	background-color: rgba(18,189,220,0.3)
+}
