--- a/css/slider.1.css
+++ b/css/slider.1.css
@@ -16,11 +16,11 @@
 }
 
 .left-paddle {
-    background: url("../img/left-paddle.png") no-repeat 5px center;
+    background: url("../img/left-paddle-white.png") no-repeat 5px center;
 }
 
 .right-paddle {
-    background: url("../img/right-paddle.png") no-repeat -5px;
+    background: url("../img/right-paddle-white.png") no-repeat -5px;
     background-position: right;
 }
 
@@ -39,7 +39,8 @@
 .photolist-wrapper .photolist  img {
     padding: 2px;
     margin: 2px;
-    /* cursor: pointer; */
+    cursor: pointer;
+    vertical-align: top;
     background: #F6F6F6;
     border: 1px solid #666;
 }
