select unselect label
- use ctrl key to select multiple labels
- select without ctrl key to unselect all the selected labels
- change css of select points and rect label box

--- a/css/svg.css
+++ b/css/svg.css
@@ -2,5 +2,10 @@
     fill: yellow;
     stroke: green;
     stroke-width: 2px;
-    opacity: 0.1;
+    fill-opacity: 0.1;
+}
+.svg_select_points{
+    fill: black;
+    fill-opacity: 0.1;
+    stroke: grey;
 }
