import / export data
- save / open project file
- import / export Dlib xml file
- export dlib pts file
- create menu
- display snack bar

--- a/css/tags.css
+++ b/css/tags.css
@@ -44,3 +44,16 @@
 .svg_select_boundingRect{
     stroke-dasharray: initial !important;
 }
+
+.draw-mode{
+    cursor: crosshair;
+}
+
+.select-mode{
+    cursor: move;
+}
+
+.savebtn {
+    margin: 10px;
+    width: 150px;
+}
